@@ -112,6 +112,7 @@ event_columns = [
     ( "event_match_groups",   "" ),
     ( "event_contact_groups", "" ),
     ( "event_ipaddress",      "" ), # introduced in 1.2.7
+    ( "event_orig_host",      "" ),
 ]
 
 grepping_filters = [
@@ -3858,7 +3859,7 @@ def do_event_action(action, event, user=""):
             send_email(to, subject, body)
             log_event_history(event, "EMAIL", user, "%s|%s" % (to, subject))
         elif action_type == 'script':
-            execute_script(escape_null_bytes(substitute_event_tags(settings["script"], get_quoted_event(event))))
+            execute_script(escape_null_bytes(substitute_event_tags(settings["script"], get_quoted_event(event))), event)
             log_event_history(event, "SCRIPT", user, action['id'])
         else:
             log("Cannot execute action %s: invalid action type %s" % (action["id"], action_type))
@@ -3868,7 +3869,7 @@ def do_event_action(action, event, user=""):
         log("Error during execution of action %s: %s" % (action["id"], format_exception()))
 
 
-def substitute_event_tags(text, event):
+def get_event_tags(event):
     substs = [("match_group_%d" % (nr+1), g)
                for (nr, g)
                 in enumerate(event.get("match_groups", ()))]
@@ -3881,14 +3882,22 @@ def substitute_event_tags(text, event):
         if type(v) in [ str, unicode ]:
             return v
         else:
-            return str(v)
+            return "%s" % v
 
+    tags = {}
     for key, value in substs:
         if type(value) == tuple:
             value = " ".join(map(to_string, value))
         else:
             value = to_string(value)
 
+        tags[key] = value
+
+    return tags
+
+
+def substitute_event_tags(text, event):
+    for key, value in get_event_tags(event).items():
         text = text.replace('$%s$' % key.upper(), value)
     return text
 
@@ -3923,7 +3932,16 @@ def send_email(to, subject, body):
     return True
 
 
-def execute_script(body):
+def execute_script(body, event):
+    script_env = os.environ.copy()
+
+    for key, value in get_event_tags(event).items():
+        if type(key) == unicode:
+            key = key.encode("utf-8")
+        if type(value) == unicode:
+            value = value.encode("utf-8")
+        script_env["EVENT_" + key.upper()] = value
+
     # Traps can contain 0-Bytes. We need to remove this from the script
     # body. Otherwise suprocess.Popen will crash.
     p = subprocess.Popen(
@@ -3931,12 +3949,11 @@ def execute_script(body):
         shell = True,
         executable = '/bin/bash',
         stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.STDOUT,
-        close_fds=True
+        close_fds=True,
+        env = script_env,
     )
-    output = p.stdout.read()
-    exitcode = p.wait()
-
-    log('  Exitcode: %d' % exitcode)
+    output = p.communicate()[0]
+    log('  Exitcode: %d' % p.returncode)
     if output:
         log('  Output: %s' % output)
 
