@@ -93,6 +93,7 @@
     Event Console:
     * 4154 Do not send notifications if host found and currently in downtime...
             NOTE: Please refer to the migration notes!
+    * 4276 Actions can now access the event macros via environment variables...
     * 4155 FIX: Do not perform actions on events if overflow limit is active...
     * 4156 FIX: Fix off-by-one error in EC limit handling...
     * 4199 FIX: Fix detection of replication mode if EC is distributed...
